fix navbar css overflow

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3967,7 +3967,7 @@ tbody.collapse.show {
   padding-bottom: 0.3125rem;
   margin-right: 0.5rem;
   margin-left: 0.5rem;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   line-height: inherit;
   white-space: nowrap;
 }
